fix navbar z-index styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,7 +42,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 6;
+        z-index: 10;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.75);
